# cope

./: .editorconfig  .gitlab-ci.yml  .pre-commit-config.yaml  rustfmt.toml
crates/cope/: Cargo.toml
crates/cope-dom/: Cargo.toml  README.md
crates/cope-dom/src/: elements.rs  lib.rs
crates/cope/src/: lib.rs
crates/cope/src/inst/: atom.rs  engine.rs
crates/cope/src/instance/: atom.rs  engine.rs  mod.rs
crates/cope/src/singleton/: mod.rs
crates/example-cli-counter/: Cargo.toml
crates/example-cli-counter/src/: reactive.rs
crates/example-web-counter/: Cargo.toml  README.md  index.html
crates/example-web-counter/src/: lib.rs  reactive.rs
crates/example-web-todo/: Cargo.toml  README.md
crates/example-web-todo/src/: lib.rs
crates/example-web-todo/src/reactive/: atom.rs  mod.rs
crates/js-framework-benchmark/: Cargo.toml  README.md  index.html
crates/js-framework-benchmark/src/: dom.rs  lib.rs
crates/js-framework-benchmark/src/dom/: builders.rs  delegate.rs  list.rs  misc.rs  mod.rs
crates/js-framework-benchmark/src/reactive/: atom.rs  mod.rs  reconcile.rs  tracking_vec.rs
