[package]
name = "cope-dom"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[dependencies]
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Document",
    "Element",
    "HtmlButtonElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
