[package]
name = "cope-dom"
version = "0.0.1"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"
description = "wip"
license = "AGPL-3.0-only"

[features]
strict = []

[dependencies]
wasm-bindgen = "0.2.68"

cope = { version = "0.0.1", path = "../cope" }

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Document",
    "Element",
    "HtmlButtonElement",
    "Text",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
