[package]
name = "cope-example-web-counter"
version = "0.0.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
strict = []

[dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.44"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
